--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=your-rds-endpoint
+DB_HOST=database-1.c76qmkm6iiyz.us-east-2.rds.amazonaws.com
 DB_USER=admin
-DB_PASSWORD=your-password
+DB_PASSWORD=hola1234..
 DB_NAME=users_db
 JWT_SECRET=your_jwt_secret
 PORT=3000
